--- a/transfer_service/Dockerfile
+++ b/transfer_service/Dockerfile
@@ -1,6 +1,12 @@
-FROM python:3.9
+FROM python:3.10
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    python3-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY requirements.txt /app/
