--- a/transfer_service/docker-compose.yml
+++ b/transfer_service/docker-compose.yml
@@ -11,21 +11,23 @@ services:
   postgres:
     image: postgres:13
     environment:
-      POSTGRES_DB: transfer_service_db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: db_tm_service
+      POSTGRES_USER: main
+      POSTGRES_PASSWORD: 123
     ports:
       - "5432:5432"
 
   kafka:
     image: wurstmeister/kafka:latest
     ports:
-      - "9092:9092"
+      - "9092:9092"  # Внешний порт для INSIDE
+      - "9093:9093"  # Внешний порт для OUTSIDE
     environment:
-      KAFKA_ZOOKEEPER: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9092
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9092"
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
 
   zookeeper:
     image: wurstmeister/zookeeper:latest
